website-deployment/k8s-manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pt-service
spec:
  selector:
    app: playtechnique-website
  ports:
    - protocol: TCP
      port: 8080
      targetPort: pt-port
